--- a/test/dijkstra/CMakeLists.txt
+++ b/test/dijkstra/CMakeLists.txt
@@ -1,8 +1,31 @@
 cmake_minimum_required(VERSION 3.10)
-project(dijkstra)
 
-include_directories(include())
+set(THIS dijkstra)
 
-file(GLOB SOURCES "src/*.cpp")
+project(${THIS} C CXX)
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+enable_testing()
+
+add_subdirectory(googletest)
+
+# include_directories(include)
+
+set(HEADERS
+    include/graph.hpp
+)
+
+# file(GLOB SOURCES "src/*.cpp")
+
+set(SOURCES
+    src/graph.cpp
+)
+
+# add_executable(${PROJECT_NAME} ${SOURCES})
+
+add_library(${THIS} STATIC ${SOURCES} ${HEADERS})
+
+add_subdirectory(test)
